--- a/advent.html
+++ b/advent.html
@@ -55,7 +55,7 @@
         background-color: rgb(92, 15, 15);
         border: 3px solid rgb(117, 9, 9);
         border-radius: 5px;
-        padding: 0 30px 30px 30px;
+        padding: 0 30px 0 30px;
         color: whitesmoke;
         max-width: 300px;
     }
@@ -81,7 +81,8 @@
         <div id="window">
             <h2 id="day">Day 1</h2>
             <p id="description">Calculate the calbration values for the trebuchet.</p>
-            <a href="#" id="part1">Part 1</a>&nbsp;<a href="#" id="part2">Part 2</a>
+            <p><a href="#" id="part1">Part 1</a>&nbsp;<a href="#" id="part2">Part 2</a></p>
+            <p id="resultsection">Result: <span id="result"></span></p>
         </div>
     </div>
 </body>
