--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
     body {
         background-color: black;
         font-family: "Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;
+        user-select: none;
     }
 
     #window {
