--- a/index.html
+++ b/index.html
@@ -26,11 +26,14 @@
     .calendar {
         position: relative;
     }
+    .blockselect {
+        user-select: none;
+    }
     .window {
         position: absolute;
         font-size: 3.2rem;
         font-weight: 100;
-        font-family: "Luminari";
+        font-family: "fantasy";
         color: whitesmoke;
         cursor: pointer;
         width: 60px;
@@ -45,13 +48,12 @@
     body {
         background-color: black;
         font-family: "Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;
-        user-select: none;
     }
 
     #window {
         position: absolute;
-        top: 10px;
-        left: 10px;
+        top: 40px;
+        left: 40px;
         opacity: 0;
         background-color: rgb(92, 15, 15);
         border: 3px solid rgb(117, 9, 9);
@@ -74,11 +76,14 @@
         <h1>Advent of Code 2023</h1>
     </div>
     <div class="calendar">
-        <img src="calendar.png">
-        <div class="window" style="top: 360px; left: 400px" onmouseenter="openWindow(1)">1</div>
-        <div class="window" style="top: 740px; left: 430px" onmouseenter="openWindow(2)">2</div>
-        <div class="window" style="top: 560px; left: 550px" onmouseenter="openWindow(3)">3</div>
-        <div class="window" style="top: 285px; left: 540px" onmouseenter="openWindow(4)">4</div>
+        <div class="blockselect">
+            <img src="calendar.png">
+            <div class="window" style="top: 360px; left: 400px" onmouseenter="openWindow(1)">1</div>
+            <div class="window" style="top: 740px; left: 430px" onmouseenter="openWindow(2)">2</div>
+            <div class="window" style="top: 560px; left: 550px" onmouseenter="openWindow(3)">3</div>
+            <div class="window" style="top: 285px; left: 540px" onmouseenter="openWindow(4)">4</div>
+            <div class="window" style="top: 795px; left: 325px" onmouseenter="openWindow(5)">5</div>
+        </div>
         <div id="window">
             <h2 id="day">Day 1</h2>
             <p id="description">Calculate the calbration values for the trebuchet.</p>
