Move wasm code execution to web worker to allow us to show realtime progress

--- a/index.html
+++ b/index.html
@@ -81,13 +81,13 @@
     <div class="calendar">
         <div class="blockselect">
             <img src="calendar.png">
-            <div class="window" style="top: 500px; left: 375px" onmouseenter="openWindow(1)">1</div>
-            <div class="window" style="top: 225px; left: 410px" onmouseenter="openWindow(2)">2</div>
-            <div class="window" style="top: 543px; left: 618px" onmouseenter="openWindow(3)">3</div>
-            <div class="window" style="top: 270px; left: 555px" onmouseenter="openWindow(4)">4</div>
-            <div class="window" style="top: 360px; left: 395px" onmouseenter="openWindow(5)">5</div>
-            <div class="window" style="top: 660px; left: 370px" onmouseenter="openWindow(6)">6</div>
-            <div class="window" style="top: 684px; left: 650px" onmouseenter="openWindow(7)">7</div>
+            <div class="window" style="top: 225px; left: 410px" onmouseenter="return openWindow(2)">2</div>
+            <div class="window" style="top: 500px; left: 375px" onmouseenter="return openWindow(1)">1</div>
+            <div class="window" style="top: 543px; left: 618px" onmouseenter="return openWindow(3)">3</div>
+            <div class="window" style="top: 270px; left: 555px" onmouseenter="return openWindow(4)">4</div>
+            <div class="window" style="top: 360px; left: 395px" onmouseenter="return openWindow(5)">5</div>
+            <div class="window" style="top: 660px; left: 370px" onmouseenter="return openWindow(6)">6</div>
+            <div class="window" style="top: 684px; left: 650px" onmouseenter="return openWindow(7)">7</div>
         </div>
         <div id="window">
             <h2 id="day">Day 1</h2>
