--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
             <div class="window" style="top: 360px; left: 395px" onclick="return openWindow(5)">5</div>
             <div class="window" style="top: 660px; left: 370px" onclick="return openWindow(6)">6</div>
             <div class="window" style="top: 684px; left: 650px" onclick="return openWindow(7)">7</div>
+            <div class="window" style="top: 388px; left: 620px" onclick="return openWindow(8)">8</div>
         </div>
         <div id="window">
             <h2 id="day">Day 1</h2>
