--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
             <div class="window" style="top: 684px; left: 650px" onclick="return openWindow(7)">7</div>
             <div class="window" style="top: 388px; left: 620px" onclick="return openWindow(8)">8</div>
             <div class="window" style="top: 752px; left: 97px" onclick="return openWindow(9)">9</div>
+            <div class="window" style="top: 312px; left: 462px" onclick="return openWindow(10)">10</div>
         </div>
         <div id="window">
             <h2 id="day">Day 1</h2>
