--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
             <div class="window" style="top: 752px; left: 97px" onclick="return openWindow(9)">9</div>
             <div class="window" style="top: 312px; left: 462px" onclick="return openWindow(10)">10</div>
             <div class="window" style="top: 600px; left: 300px" onclick="return openWindow(11)">11</div>
+            <div class="window" style="top: 228px; left: 482px" onclick="return openWindow(12)">12</div>
         </div>
         <div id="window">
             <h2 id="day">Day 1</h2>
