--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
             <div class="window" style="top: 600px; left: 300px" onclick="return openWindow(11)">11</div>
             <div class="window" style="top: 228px; left: 482px" onclick="return openWindow(12)">12</div>
             <div class="window" style="top: 582px; left: 360px" onclick="return openWindow(13)">13</div>
+            <div class="window" style="top: 460px; left: 564px" onclick="return openWindow(14)">14</div>
         </div>
         <div id="window">
             <h2 id="day">Day 1</h2>
