--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
             <div class="window" style="top: 228px; left: 482px" onclick="return openWindow(12)">12</div>
             <div class="window" style="top: 582px; left: 360px" onclick="return openWindow(13)">13</div>
             <div class="window" style="top: 460px; left: 564px" onclick="return openWindow(14)">14</div>
+            <div class="window" style="top: 515px; left: 320px" onclick="return openWindow(15)">15</div>
         </div>
         <div id="window">
             <h2 id="day">Day 1</h2>
