--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
             <div class="window" style="top: 460px; left: 564px" onclick="return openWindow(14)">14</div>
             <div class="window" style="top: 515px; left: 320px" onclick="return openWindow(15)">15</div>
             <div class="window" style="top: 406px; left: 585px; font-size: 3rem" onclick="return openWindow(16)">16</div>
+            <div class="window" style="top: 525px; left: 865px; font-size: 3rem" onclick="return openWindow(17)">17</div>
         </div>
         <div id="window">
             <h2 id="day">Day 1</h2>
