--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     h1 {
         font-size: 3rem;
         font-weight: 100;
-        font-family: "Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;
+        font-family: "Segoe UI","Helvetica Neue",Arial,sans-serif;
         color: whitesmoke;
     }
     h2 {
@@ -50,7 +50,7 @@
     }
     body {
         background-color: black;
-        font-family: "Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;
+        font-family: "Segoe UI","Helvetica Neue",Arial,sans-serif;
     }
 
     #window {
