Fix font on Linux

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         position: absolute;
         font-size: 3.2rem;
         font-weight: 100;
-        font-family: "fantasy";
+        font-family: "Gentium";
         color: whitesmoke;
         cursor: pointer;
         width: 60px;
