Add coi-serviceworker.js to add required Cors headers to responses

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Advent of Code 2023</title>
+    <script src="coi-serviceworker.js"></script>
     <script src="advent.js"></script>
     <link rel="icon" type="image/png" href="favicon.png">
 </head>
