Improve gradient colours

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     }
 
     #solutioncanvas {
-        background-color: rgb(50, 50, 50);
+        background-color: #0f0f23;
         border-radius: 5px;
         opacity: 0.85;
         position: relative;
