Prepare for Day 18

--- a/index.html
+++ b/index.html
@@ -129,6 +129,7 @@
             <div class="window" style="top: 515px; left: 320px" onclick="return openWindow(15)">15</div>
             <div class="window" style="top: 406px; left: 585px; font-size: 3rem" onclick="return openWindow(16)">16</div>
             <div class="window" style="top: 525px; left: 865px" onclick="return openWindow(17, true)">17</div>
+            <div class="window" style="top: 520px; left: 495px" onclick="return openWindow(18, true)">18</div>
         </div>
         <div id="window">
             <h2 id="day">Day 1</h2>
