Day 0 to reproduce bug

--- a/index.html
+++ b/index.html
@@ -112,6 +112,7 @@
     <div class="calendar">
         <div class="blockselect">
             <img src="calendar.png">
+            <div class="window" style="top: 200px; left: 250px" onclick="return openWindow(0, true)">0</div>
             <div class="window" style="top: 500px; left: 375px" onclick="return openWindow(1)">1</div>
             <div class="window" style="top: 225px; left: 410px" onclick="return openWindow(2)">2</div>
             <div class="window" style="top: 543px; left: 618px" onclick="return openWindow(3)">3</div>
