--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         display: none;
     }
     #solutioncanvas {
-        display: block;
+        display: none;
     }
 
 </style>
@@ -130,6 +130,7 @@
             <div class="window" style="top: 406px; left: 585px; font-size: 3rem" onclick="return openWindow(16)">16</div>
             <div class="window" style="top: 525px; left: 865px" onclick="return openWindow(17, true)">17</div>
             <div class="window" style="top: 520px; left: 495px" onclick="return openWindow(18, true)">18</div>
+            <div class="window" style="top: 575px; left: 539px" onclick="return openWindow(19)">19</div>
         </div>
         <div id="window">
             <h2 id="day">Day 1</h2>
